<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			tools:ignore="AppCompatResource,UnusedAttribute"
			xmlns:vuzeapp="http://schemas.android.com/apk/res-auto" >

	<!--
	<item
		android:id="@+id/action_search"
		android:icon="@drawable/ic_menu_search"
		android:showAsAction="ifRoom"
		app:actionViewClass="android.support.v7.widget.SearchView"
		android:title="@string/search"/>
	-->
	<item
		android:id="@+id/action_refresh"
		android:icon="@drawable/ic_refresh_white_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/action_refresh"
		android:visible="false"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_search"
		android:icon="@drawable/ic_search_white_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/search"
		android:visible="true"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_swarm_discoveries"
		android:icon="@drawable/ic_public_white_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/drawer_rcm"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_subscriptions"
		android:icon="@drawable/ic_rss_feed_white_24px"
		android:showAsAction="ifRoom"
		android:title="Subscriptions"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_add_torrent"
		android:icon="@drawable/ic_add_circle_outline_white_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/action_add_torrent"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_start_all"
		android:icon="@drawable/ic_playlist_play_white_24dp"
		android:showAsAction="never"
		android:title="@string/action_start_all"
		vuzeapp:showAsAction="never"/>
	<item
		android:id="@+id/action_stop_all"
		android:icon="@drawable/ic_playlist_stop_white_24dp"
		android:showAsAction="never"
		android:title="@string/action_stop_all"
		vuzeapp:showAsAction="never"/>
	<item
		android:id="@+id/action_settings"
		android:icon="@drawable/ic_settings_white_24dp"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_session_settings"
		vuzeapp:showAsAction="never"/>
	<item
		android:id="@+id/action_social"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:icon="@drawable/ic_public_white_24dp"
		android:title="@string/menu_social"
		vuzeapp:showAsAction="never">
		<menu>
			<item
				android:id="@+id/action_about"
				android:title="@string/action_about"/>
			<item
				android:id="@+id/action_vote"
				android:title="@string/action_vote"/>
			<item
				android:id="@+id/action_forum"
				android:title="@string/action_forum"/>
			<item
				android:id="@+id/action_rate"
				android:title="@string/action_rate"/>
		</menu>
	</item>
	<item
		android:id="@+id/action_logout"
		android:icon="@drawable/ic_logout_white_24dp"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_logout"
		vuzeapp:showAsAction="never"/>
	<item
		android:id="@+id/action_shutdown"
		android:icon="@drawable/ic_power_settings_new_white_24dp"
		android:title="@string/action_shutdown_core"
		android:visible="false"
		/>


</menu>