<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:vuzeapp="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/action_sel_launch"
		android:icon="@drawable/ic_menu_view"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_launch"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_sel_launch_stream"
		android:icon="@drawable/ic_menu_view_stream"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_launch"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_sel_save"
		android:icon="@drawable/ic_menu_save"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_save"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_sel_priority_up"
		android:icon="@drawable/ic_menu_priority_up"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_priority_up"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_sel_priority_down"
		android:icon="@drawable/ic_menu_priority_down"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_priority_down"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_sel_unwanted"
		android:icon="@drawable/ic_menu_delete"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_unwanted"
		vuzeapp:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_sel_wanted"
		android:icon="@drawable/ic_menu_want"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_wanted"
		vuzeapp:showAsAction="ifRoom"/>

</menu>