<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:orientation="vertical" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_copyright"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/about_license"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
			android:id="@+id/about_ideas"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:linksClickable="true"
			android:text="@string/about_ideas"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/about_thanks_header"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/about_thanksto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:linksClickable="true"
			android:text="@string/about_thanks"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="?android:attr/textColorPrimary"/>

	</LinearLayout>

</ScrollView>