<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
						xmlns:app="http://schemas.android.com/apk/res-auto"
						xmlns:tools="http://schemas.android.com/tools"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center|center_vertical"
		android:orientation="vertical"
		android:padding="16dp">

		<com.rengwuxian.materialedittext.MaterialEditText
			android:id="@+id/profile_nick"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/profile_setting_spacer"
			android:hint="@string/profile_nickname"
			android:imeOptions="actionNext"
			android:maxLines="1"
			app:met_baseColor="?android:attr/textColorPrimary"
			app:met_floatingLabel="highlight"
			app:met_helperText="@string/profile_nick_explain"
			app:met_primaryColor="?met_primary_color"
			tools:ignore="MissingRegistered">

			<requestFocus/>
		</com.rengwuxian.materialedittext.MaterialEditText>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:id="@+id/profile_ac"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/profile_setting_spacer"
			android:hint="@string/access_code_hint"
			android:imeOptions="actionNext"
			android:maxLines="1"
			app:met_baseColor="?android:attr/textColorPrimary"
			app:met_floatingLabel="highlight"
			app:met_helperText="@string/profile_ac_explain"
			app:met_primaryColor="?met_primary_color"
			tools:ignore="MissingRegistered"/>

	</LinearLayout>

</ScrollView>